ready for first batch